--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/sifatsalehin/tikacard/blob/main/Gari%20Company%20name%20%20.pdf">Click Here Event Info</a></p>
+  <p><a href="sifatsalehin/tikacard/blob/main/Gari%20Company%20name%20%20.pdf">Click Here Event Info</a></p>
 </html>
